--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^3.1.8",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1",
-    "promise.prototype.finally": "^3.1.0"
+    "promise.prototype.finally": "^3.1.0",
+    "validator": "^10.11.0"
   }
 }
