--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^5.3.1",
     "mongodb": "^3.1.8",
     "mongoose": "^5.4.20",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "promise.prototype.finally": "^3.1.0",
     "validator": "^10.11.0"
